# libdnf5-plugin-snapper

./: .gitignore  README.md  libdnf5-plugin-snapper.spec  meson.build
.github/workflows/: ci.yml
config/: snapper.conf.in
src/: snapper.cpp
